# gravel-os

./: .gitignore  README.md  pyproject.toml  run_demo.sh  structure.txt
examples/: fibonacci.rune  pong.rock
gravelos/: __init__.py  __main__.py  cli.py  config.py
gravelos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gravelos/compiler/: codegen.py  lexer.py  parser.py
gravelos/core/: cpu.py  exceptions.py  memory.py  physics.py
gravelos/isa/: assembler.py
gravelos/ui/: dashboard.py  ide.py
